Fix overflowing file name

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -2,4 +2,5 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 100%;
 }
